--- a/installer/Go_kart_without_led.html
+++ b/installer/Go_kart_without_led.html
@@ -30,6 +30,7 @@
 					<br>특히 Arduino IDE의 시리얼 모니터가 켜져있으면 업로드가 불가능합니다.</li>
   				<li>이 페이지 가장 아래의 버튼들 중 누른 후, 자신이 가지고 있는 Arduino의 기종에 맞는 버튼을 누릅니다.
 					<br>주의> Arduino Nano의 중국 복제품의 경우 Nano oldbootloader 버튼을 누릅니다. </li>
+				<li>팝업창에서 Arduino가 연결된 포트를 선택합니다.</li>
 				<li>버튼 옆의 숫자가 100%가 되고, Done!이 뜨면, 업로드가 완료된 것입니다.</li>
 				<div style="text-align : center;"> <a target="_blank" href="https://github.com/Nukcanon/ESP32-CAM_motion_detection_telegram/blob/main/V1.1/ESP32-CAM_motion_detection_telegram.ino">프로그램 소스 보기</a></div>
 			</ol>
