--- a/installer/Go_kart_without_led.html
+++ b/installer/Go_kart_without_led.html
@@ -3,7 +3,7 @@
 	<meta charset="utf-8" />
 	<title>Nukcanon Arduino Gokart</title>
 	<base href='./' />
-	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="https://nukcanon.github.io/nukcanon/css/style.css" />
 	<script src="https://github.com/dbuezas/arduino-web-uploader/releases/download/v1.1.2/main.js"></script>
 </head>
 <body style="padding-bottom:3px;align-items:center">
