--- a/installer/Go_kart_without_led.html
+++ b/installer/Go_kart_without_led.html
@@ -90,12 +90,12 @@
 			<br>
 			<div style="text-align: center;max-width: 960px;">
 			  <button arduino-uploader hex-href="./Go_kart_without_led_nano.hex" board="nano" verify>
-			    Upload to UNO/NANO/PRO/PRO-mini [<span class="upload-progress"></span>]
+			    Upload to NANO [<span class="upload-progress"></span>]
 			  </button>
 				<br>
 				<br>
 			  <button arduino-uploader hex-href="./Go_kart_without_led_nano.hex" board="nanoOldBootloader" verify>
-			    Upload to NANO oldbootloader(중국 복제품) [<span class="upload-progress"></span>]
+			    Upload to NANO 구형(Oldboot) [<span class="upload-progress"></span>]
 			  </button>
 			</div>
 		</div>
@@ -103,4 +103,5 @@
 </div>
 </body>
 </html>
+
 
