--- a/installer/Go_kart_without_led.html
+++ b/installer/Go_kart_without_led.html
@@ -88,27 +88,29 @@
 				</div>
 			</div>
 			<br>
-			<div style="text-align: center;max-width: 960px;">
-				Arduino 버전
-				<button arduino-uploader hex-href="./Go_kart_without_led_nano.hex" board="nano" verify>
-				Upload to NANO [<span class="upload-progress"></span>]
-				</button>
-					<br>
-					<br>
-				<button arduino-uploader hex-href="./Go_kart_without_led_nano.hex" board="nanoOldBootloader" verify>
-				Upload to NANO 구형(Oldboot) [<span class="upload-progress"></span>]
-				</button>
+			<div style="text-align: center; max-width: 960px;">
+			    <p><strong>&lt;Arduino 버전&gt;</strong></p>
+			    <button arduino-uploader hex-href="./Go_kart_without_led_nano.hex" board="nano" verify>
+			    Upload to NANO [<span class="upload-progress"></span>]
+			    </button>
+			        <br>
+			        <br>
+			    <button arduino-uploader hex-href="./Go_kart_without_led_nano.hex" board="nanoOldBootloader" verify>
+			    Upload to NANO 구형(Oldboot) [<span class="upload-progress"></span>]
+			    </button>
 			</div>
-			<div style="text-align: center;max-width: 960px;">
-				ESP32 버전
-				<script type="module" src="https://unpkg.com/esp-web-tools@9.0.3/dist/web/install-button.js?module"></script>
-				<esp-web-install-button manifest="manifest.json"></esp-web-install-button>
+			
+			<div style="text-align: center; max-width: 960px; margin-top: 2em;">
+			    <p><strong>&lt;ESP32 버전&gt;</strong></p>
+			    <script type="module" src="https://unpkg.com/esp-web-tools@9.0.3/dist/web/install-button.js?module"></script>
+			    <esp-web-install-button manifest="manifest.json"></esp-web-install-button>
 			</div>
 		</div>
 	</div>
 </div>
 </body>
 </html>
+
 
 
 
