--- a/installer/Go_kart_without_led.html
+++ b/installer/Go_kart_without_led.html
@@ -101,7 +101,65 @@
 			</div>
 			
 			<div style="text-align: center; max-width: 960px; margin-top: 2em;">
-			    <p><strong>&lt;ESP32 버전&gt;</strong></p>
+				<p><strong>&lt;ESP32 버전&gt;</strong></p>
+				<div style="display:inline-block; padding: 0px 6px 10px;">
+					<table cellspacing="0" style="border-collapse:collapse; border-color:initial; border-style:none; border-width:initial; height:205px; table-layout:fixed; width:228px; margin:auto;">
+					    <thead>
+					        <tr style="background-color:#dcdcdc;">
+					            <th style="border:solid #5d5d5d 1px; padding:8px; text-align:center; font-weight:bold;">핀 번호</th>
+					            <th style="border:solid #5d5d5d 1px; padding:8px; text-align:center; font-weight:bold;">연결 부품</th>
+					            <th style="border:solid #5d5d5d 1px; padding:8px; text-align:center; font-weight:bold;">연결 부품 핀 이름</th>
+					        </tr>
+					    </thead>
+					    <tbody>
+					        <tr>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">4</td>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">MDD10A</td>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">DIR1</td>
+					        </tr>
+					        <tr>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">13</td>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">CHC-104B-M4 조이스틱</td>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">Y축 가변저항 가운데 핀</td>
+					        </tr>
+					        <tr>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">14</td>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">네오픽셀 LED (오른쪽)</td>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">Data In (DIN)</td>
+					        </tr>
+					        <tr>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">15</td>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">CHC-104B-M4 조이스틱</td>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">X축 가변저항 가운데 핀</td>
+					        </tr>
+					        <tr>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">16</td>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">MDD10A</td>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">PWM1</td>
+					        </tr>
+					        <tr>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">18</td>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">MDD10A</td>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">DIR2</td>
+					        </tr>
+					        <tr>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">19</td>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">MDD10A</td>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">PWM2</td>
+					        </tr>
+					        <tr>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">26</td>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">네오픽셀 LED (후방)</td>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">Data In (DIN)</td>
+					        </tr>
+					        <tr>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">27</td>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">네오픽셀 LED (왼쪽)</td>
+					            <td style="border:solid #5d5d5d 1px; padding:8px; text-align:center;">Data In (DIN)</td>
+					        </tr>
+					    </tbody>
+					</table>
+				</div>
 			    <script type="module" src="https://unpkg.com/esp-web-tools@9.0.3/dist/web/install-button.js?module"></script>
 			    <esp-web-install-button manifest="manifest.json"></esp-web-install-button>
 			</div>
@@ -110,6 +168,7 @@
 </div>
 </body>
 </html>
+
 
 
 
