--- a/installer/Go_kart_without_led.html
+++ b/installer/Go_kart_without_led.html
@@ -167,8 +167,8 @@
 			<div style="line-height:2.0em">
 				<ol>
 					<li>ESP32를 컴퓨터에 연결합니다.</li>
-					<li>ESP32 드라이버(CP210x 등)가 설치되어 있어야 합니다.</li>
-					<li>아래 <strong>INSTALL</strong> 버튼을 눌러 업로드합니다.</li>
+					<li>ESP32 드라이버(CH340 혹은 CP210X)가 설치되어 있어야 합니다.</li>
+					<li>아래 <strong>CONNECT (Click to Install)</strong> 버튼을 눌러 업로드합니다.</li>
 				</ol>
 			</div>
 
@@ -254,3 +254,4 @@
 	</div>
 </body>
 </html>
+
